Fixing kafka json serializer
